# bazel_test

./: .gitignore  WORKSPACE  package-lock.json  package.json  tsconfig.json
apps/app1/: BUILD.bazel  app.ts
libs/lib1/: BUILD.bazel  index.ts
