package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "build",
    srcs = ["app.ts"],
    deps = ["//libs/lib1:build"],
)

load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

rollup_bundle(
    name = "bundle",
    entry_point = "app.js",
    deps = [":build"],
)
